@@ -40,6 +40,8 @@ Funcions
 	int lock_file(int fd);
 	int already_running(const char* lockfile);
 	int init_i2c_device(char *adapter, unsigned char addr);
+	int create_read_fifo(char *name);
+	int create_write_fifo(char *name);
 
 
 Configuraion
